Fixed skill text spacing issue in 4k resolution

--- a/src/app/home/home.component.css
+++ b/src/app/home/home.component.css
@@ -47,6 +47,6 @@
 }
 
 .skills .col-md-4{
-  padding-left: 400px;
+  padding-left: 300px;
 }
 
